Overlapping images fix

--- a/main.css
+++ b/main.css
@@ -47,6 +47,7 @@ a:active {
   background-size: cover;
   background-position: center;
   padding: 50px 15%;
+  max-height: 968px;
 }
 .header nav {
   width: 100%;
@@ -93,6 +94,7 @@ a:active {
   align-items: center;
   justify-content: center;
   padding: 0 12%;
+  max-height: 968px;
 }
 .main-holder {
   display: flex;
